--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>test</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta in repellat enim, autem nulla repudiandae? Totam deleniti sint repudiandae, voluptas fugiat aut, esse debitis unde et, omnis quasi cum vero?</p>
     <button>read more</button>
+    <h2>adding button in new branch</h2>
 </body>
 </html>
